--- a/DistSystemsMessageSender/DistSystemsMessageSender/DistSystemsMessageSender.csproj
+++ b/DistSystemsMessageSender/DistSystemsMessageSender/DistSystemsMessageSender.csproj
@@ -97,9 +97,11 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Contact.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
