--- a/DistSystemsMessageSender/DistSystemsMessageSender/project.json
+++ b/DistSystemsMessageSender/DistSystemsMessageSender/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.3",
+    "Newtonsoft.Json": "10.0.2",
     "WindowsAzure.Messaging.Managed": "0.1.7.9"
   },
   "frameworks": {
